--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kg.nurzhamal.quizapp">
+    package="kg.kurmanjan.quizapp">
 
     <application
         android:allowBackup="true"
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizApp">
-        <activity android:name=".QuestionsActivity">
+        <activity android:name="kg.kurmanjan.quizapp.QuestionsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashActivity"></activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name="kg.kurmanjan.quizapp.SplashActivity"></activity>
+        <activity android:name="kg.kurmanjan.quizapp.MainActivity"></activity>
     </application>
 
 </manifest>
